--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import '~antd/dist/antd.css';
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  position : absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, .65);
+  .container {
+    width: 40%;
+    height: calc(100% - 100px);
+    background-color: rgba(255, 255, 255, .3);
+    margin: 50px auto;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .15)
+  }
+  .container:hover {
+    box-shadow: 0 11px 15px 0 rgba(0, 0, 0, .5);
+    transition: all .8s ease-in-out;
+  }
 }
